# api-description-tool

./: .gitignore  LICENSE  NGS_ASC_departures.xlsx  README.md  _NGS_ASC_configuration.xlsx  api_departures.xlsx  api_tab_desc.xlsx  api_tab_desc_290825.xlsx  api_tab_desc_params.csv  api_tab_desc_req_body.csv  api_tab_desc_res_body.csv  config_example.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ~$api_tab_desc.xlsx
.github/workflows/: tests.yml
api_description_tool/: cli.py  config.py  filter.py  flattener.py  logger.py  parser.py  tables.py  writer_csv.py  writer_excel.py
docs/: API Description Tool SRS 2 (Updated).md  API Description Tool SRS 2.md  API Description Tool – Solution Design (Updated).md  API Description Tool – Solution Design.md  CR#1 filtering_190925_8.md
tests/: conftest.py  test_cli.py  test_config.py  test_filter.py  test_integration_specs.py  test_parser.py  test_tables.py  test_writer_csv.py  test_writer_excel.py
tests/data/: NGS_ASC-an.yaml  NGS_ASC-departures-an.yaml  alt-trans-an.yml  psc_an.yml
